--- a/src/imageInfo.html
+++ b/src/imageInfo.html
@@ -7,7 +7,7 @@
     <title>EXIF example with inline EXIF info</title>
   </head>
   <body>
-    <script type="text/javascript" src="/vendors/exif.js"></script>
+    <script type="text/javascript" src="./vendors/exif.js"></script>
     <input type="file" id="file" />
     <div class="info"></div>
     <img class="pre" src="" alt="" />
