--- a/src/resposive.html
+++ b/src/resposive.html
@@ -78,6 +78,11 @@
         },
         false
       );
+      // window.onbeforeunload = function(e) {
+      //   e = e || window.event;
+      //   e.returnValue = "are you want to exit the web";
+      //   return "helllo";
+      // };
     </script>
   </body>
 </html>
