--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
       document.head.appendChild(base);
     }
   </script>
+  <script>
+    var G = {
+      BUILD_TIME: "{{BUILD_TIME}}"
+    };
+  </script>
   <body>
     {{ _content_ }}
   </body>
