--- a/src/music.html
+++ b/src/music.html
@@ -186,7 +186,7 @@
     }
   </style>
   <body>
-    <audio id="audio" src="gufangzishang.mp3"></audio>
+    <audio id="audio" src="./gufangzishang.mp3"></audio>
     <div class="content">
       <a class="play">play</a>
     </div>
