--- a/src/imageCom.html
+++ b/src/imageCom.html
@@ -11,10 +11,8 @@
   <body>
     <style></style>
     <a href="alipays://">打开支付宝</a>
-    <button class="click">click</button>
-    <button class="click.a">click.a</button>
-    <button class="click.b">click.b</button>
-    <script></script>
+    <a href="mailto://">G Mail</a>
+    <a href="tencent://">QQ</a>
 
     <br />
     <input type="file" id="file" />
