--- a/src/pdf.html
+++ b/src/pdf.html
@@ -12,11 +12,7 @@
     <script>
       const pdf = window["pdfjs-dist/build/pdf"];
       var url = location.search.replace("?url=", "");
-      let path = "";
-      // if (/htmlCollect/.test(location.pathname)) {
-      //   path = "htmlCollect";
-      // }
-      pdf.GlobalWorkerOptions.workerSrc = path + "/vendors/pdf.worker.js";
+      pdf.GlobalWorkerOptions.workerSrc = "vendors/pdf.worker.js";
 
       // Asynchronous download of PDF
       var loadingTask = pdf.getDocument(url);
