--- a/src/template.html
+++ b/src/template.html
@@ -134,6 +134,7 @@
         console.timeEnd("content");
       });
     </script>
+    <img src="../assert/haibo.jpeg" alt="" />
     <div class="grid">
       <div>1</div>
       <div>2</div>
@@ -157,7 +158,7 @@
           "d e f"
           "g h i";
         grid-auto-flow: column;
-        justify-content: end;
+        justify-content: start;
         align-items: stretch;
       }
       .grid > div {
