--- a/src/image.html
+++ b/src/image.html
@@ -20,7 +20,7 @@
       function LoadingImg() {
         let imageArr = new Array(12)
           .fill(1)
-          .map((item, index) => `/pic${index}.jpg`);
+          .map((item, index) => `/img/pic1${index}.jpg`);
         const imageHtml = imageArr
           .map(item => {
             return `<img src="${item}" title="${item}" />`;
@@ -35,8 +35,8 @@
           loading.setAttribute("data-process", count);
           loading.style.width =
             parseInt(Math.ceil((count / total) * 100)) + "%";
-          if (errArr.length + count == total) {
-            alert("finish");
+          if (count == total) {
+            // alert("finish");
             console.log(`finish: ${count}`);
             console.log(`err: ${errArr.join("&")}`);
           }
@@ -56,14 +56,35 @@
           img.addEventListener(
             "error",
             function(ev) {
-              errArr.push(ev.target.src);
+              const retryTime = +this.dataset.retry || 0;
+              if (retryTime == 3) {
+                count++;
+                errArr.push(ev.target.src);
+              } else {
+                this.setAttribute("data-retry", retryTime + 1);
+                this.setAttribute(
+                  "src",
+                  this.getAttribute("src").replace(/\d+/, function(f) {
+                    return f.slice(1);
+                  })
+                );
+              }
             },
             false
           );
         });
       }
       window.onload = function() {
-        // LoadingImg();
+        LoadingImg();
+      };
+      window.onpageshow = function() {
+        window.addEventListener(
+          "error",
+          function(ev) {
+            console.log(ev.target.nodeName);
+          },
+          true
+        );
       };
     </script>
     <style>
