--- a/src/webWorker.html
+++ b/src/webWorker.html
@@ -54,7 +54,8 @@
   </head>
   <body>
     <button id="btn">click</button>
-    <div class="hover">hover me</div>
+    <div class="hover hover2">hover me</div>
+    <div class="hover1 hover">hover me Two</div>
     <div class="client"></div>
     <div class="content"></div>
     <script>
@@ -108,39 +109,52 @@
       </div>
     </template>
     <script>
-      const hoverDom = document.querySelector(".hover");
+      const hoverDom = document.querySelector(".hover2");
+      const hoverDom1 = document.querySelector(".hover1");
       const clientDom = document.querySelector(".client");
 
       function Layer(dom) {
+        this.defaultVale = this.getInnerText();
         this.dom = dom;
         this.LayerDom = null;
+        this.hasDis = false;
         this.init();
         this.bindEvent();
       }
+
       Layer.prototype.init = function() {
         const tem = document.getElementById("layer-template");
         document.body.appendChild(tem.content);
         this.LayerDom = document.querySelector(".layer");
+        this.updateText(this.defaultVale);
       };
       Layer.prototype.update = function(x, y) {
         console.log(x, y);
         this.LayerDom.style.cssText = `left: ${x}px;top: ${y}px;`;
+        // this.updateText(this.getInnerText());
       };
       Layer.prototype.updateText = function(text) {
+        console.log(text, "updateText");
         this.LayerDom.querySelector(".container").innerText = text;
+      };
+      Layer.prototype.getInnerText = function(text) {
+        return this.dom.innerText || this.defaultVale;
       };
       Layer.prototype.bindEvent = function() {
         console.log("bindEvent", this.dom);
         this.dom.addEventListener("mousemove", ev => {
           console.log(ev);
-          const { left, top, height, width } = this.dom.getBoundingClientRect();
+          const { left, top, height } = this.dom.getBoundingClientRect();
+          const { width } = this.LayerDom.getBoundingClientRect();
           const x = left + ev.offsetX - width / 2;
           const y = top + height + 10;
+          console.log(this.dom.getBoundingClientRect());
           this.update(x, y);
         });
         this.dom.addEventListener("mouseenter", () => {
           console.log("enter", this.LayerDom);
           this.LayerDom.classList.remove("hide");
+          this.updateText(this.defaultVale);
         });
         this.dom.addEventListener("mouseout", () => {
           console.log("out");
@@ -148,7 +162,20 @@
         });
       };
 
-      var layerInstance = new Layer(hoverDom);
+      function Super(dom) {
+        this.dom = dom;
+        Layer.call(this, dom);
+      }
+      // Object.setPrototypeOf(Super.prototype, Layer.prototype);
+      Super.prototype = Object.create(Layer.prototype, {
+        constructor: {
+          value: Super
+        }
+      });
+
+      var layerInstance = new Super(hoverDom);
+      console.log(layerInstance);
+      new Super(hoverDom1);
     </script>
   </body>
 </html>
