--- a/src/canvas.html
+++ b/src/canvas.html
@@ -1,12 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>canvas</title>
-</head>
-<body>
+    <style>
+      canvas {
+        background: white;
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
     <h1>canvas</h1>
-</body>
+    <canvas id="canvas" width="1000" height="400"></canvas>
+    <button id="btn">change size</button>
+    <script module>
+      const canvas = document.getElementById("canvas");
+      const ctx = canvas.getContext("2d");
+      //   ctx.fillStyle = "RGBA(255, 0, 0, 1)";
+      //   const linear = ctx.createLinearGradient(0, 0, 100, 100);
+      //   linear.addColorStop(0, "red");
+      //   linear.addColorStop(0.5, "yellow");
+      //   linear.addColorStop(1, "blue");
+      //   ctx.fillStyle = linear;
+      //   ctx.fillRect(0, 0, 100, 100);
+      const radial = ctx.createRadialGradient(75, 75, 0, 75, 75, 25);
+      radial.addColorStop(0, "red");
+      radial.addColorStop(1, "blue");
+      ctx.fillStyle = radial;
+      ctx.fillRect(50, 50, 50, 50);
+
+      // 十字架
+      //   const w = canvas.width / 2;
+      //   const h = canvas.height / 2;
+      //   console.log(w, h);
+      //   ctx.fillStyle = "#ccc";
+      //   ctx.fillRect(w - 50, h - 6, 100, 12);
+      //   ctx.fillRect(w - 6, h - 50, 12, 100);
+
+      // img
+      //   const img = new Image();
+      //   img.src = "./img/pic2.jpg";
+      //   img.onload = function(ev) {
+      //     const imgW = ev.target.width;
+      //     const imgH = ev.target.height;
+      //     const rate = imgW / imgH;
+      //     ctx.drawImage(this, 0, 0, imgW, imgH, 300, 100, 300, 300 / rate);
+      //   };
+      //   img.style.display = "none";
+      //   document.body.appendChild(img);
+
+      // font
+      //   ctx.font = "bold 30px SimSun";
+      //   const en = ctx.measureText("text");
+      //   const zh = ctx.measureText("测试");
+      //   ctx.fillText("text", 200, 100);
+      //   ctx.fillText("测试", 200, 150);
+      //   ctx.font = "12px SimSun";
+      //   ctx.fillStyle = "red";
+      //   ctx.fillText(`text ${en.width}`, 200 + en.width, 100);
+      //   ctx.fillText(`测试 ${zh.width}`, 200 + zh.width, 150);
+
+      // globalAlpha
+      //   ctx.save();
+      //   ctx.globalAlpha = 0.5;
+      //   ctx.fillStyle = "blue";
+      //   ctx.fillRect(200, 200, 50, 50);
+      //   ctx.globalAlpha = 0.7;
+      //   //   ctx.restore();
+      //   ctx.fillStyle = "red";
+      //   ctx.fillRect(220, 220, 50, 50);
+      //   function a() {
+      //     ctx.fillStyle = "red";
+      //     ctx.fillRect(10, 10, w++, w++);
+      //   }
+      //   let w = 10;
+
+      // loading
+      //   ctx.lineCap = "butt";
+      //   const center = [150, 150];
+      //   const offset = 10;
+      //   const length = 10;
+      //   ctx.lineCap = "round";
+      //   ctx.lineWidth = 4;
+      //   for (let angle = 0; angle < 360; angle += 45) {
+      //     const sin = Math.sin((angle / 180) * Math.PI);
+      //     const cos = Math.cos((angle / 180) * Math.PI);
+      //     ctx.beginPath();
+      //     ctx.moveTo(center[0] + offset * cos, center[0] + offset * sin);
+      //     ctx.lineTo(
+      //       center[0] + (offset + length) * cos,
+      //       center[0] + (offset + length) * sin
+      //     );
+      //     ctx.strokeStyle = `rgba(0,0,0, ${0.25 + (0.75 * angle) / 360})`;
+      //     ctx.stroke();
+      //   }
+
+      // setLineDash
+      //   ctx.beginPath();
+      //   ctx.setLineDash([4, 4, 4, 4]);
+      //   ctx.lineCap = "round";
+      //   ctx.lineWidth = 4;
+      //   ctx.moveTo(100, 100);
+      //   ctx.lineTo(200, 200);
+      //   ctx.stroke();
+
+      // strokeRect
+
+      //   function draw() {
+      //     ctx.save();
+      //     ctx.clearRect(100, 100, 200, 200);
+      //     ctx.lineWidth = 2;
+      //     ctx.setLineDash([8, 4]);
+      //     ctx.lineDashOffset = offset;
+      //     ctx.strokeRect(100, 100, 200, 200);
+      //   }
+      //   let run1;
+      //   let offset = 0;
+      //   function run() {
+      //     offset += 0.5;
+      //     if (offset > 24) {
+      //       offset = 0;
+      //     }
+      //     draw();
+      //     run1 = requestAnimationFrame(run);
+      //   }
+      //   //   run();
+      //   setTimeout(() => {
+      //     cancelAnimationFrame(run1);
+      //   }, 20000);
+      //   ctx.setLineDash([10, 4]);
+      //   ctx.strokeRect(100, 100, 200, 200);
+
+      //   ctx.save();
+      //   ctx.beginPath();
+      //   ctx.lineWidth = 8;
+      //   ctx.lineCap = "round";
+      //   ctx.lineJoin = "round";
+      //   ctx.moveTo(100, 100);
+      //   ctx.lineTo(100, 200);
+      //   ctx.lineTo(200, 200);
+      //   ctx.closePath();
+      //   ctx.stroke();
+      //   ctx.fillStyle = "yellow";
+      //   ctx.fill();
+      //   ctx.restore();
+
+      // shadow
+      //   ctx.save();
+      //   ctx.shadowColor = "red";
+      //   ctx.shadowBlur = 10;
+      //   ctx.fillStyle = "pink";
+      //   ctx.fillRect(100, 100, 200, 200);
+      //   ctx.restore();
+      //   ctx.font = "bold 20px SimSun";
+      //   ctx.fillStyle = "black";
+      //   ctx.fillText("hello world", 150, 150);
+      //   ctx.restore();
+      //   ctx.shadowColor = "purple";
+      //   ctx.shadowOffsetX = 2;
+      //   ctx.shadowOffsetY = 2;
+      //   ctx.font = "bold 30px simHei";
+      //   ctx.fillText("Color", 300, 100);
+
+      // strokeStyle
+      //   ctx.strokeStyle = "red";
+      //   ctx.save();
+      //   ctx.lineWidth = 10;
+      //   //   ctx.lineCap = "round";
+      //   ctx.setLineDash([10, 4]);
+      //   ctx.strokeRect(100, 100, 200, 200);
+
+      // textAlign
+      ctx.font = "bold 28px simHei";
+    </script>
+  </body>
 </html>
