--- a/src/md.html
+++ b/src/md.html
@@ -64,7 +64,7 @@
         cursor: pointer;
       }
     </style>
-    <script src="/vendors/marked.min.js"></script>
+    <script src="vendors/marked.min.js"></script>
     <script>
       let btn = document.querySelector("#submit");
       let transfromArea = document.querySelector(".show-marked");
