--- a/src/cold.html
+++ b/src/cold.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <!-- <require src="./html/demo.html" gzip=false  > -->
+    <!-- <require src="./img/pic1.jpg" inline=true class=img-response%img-block  > -->
   </body>
 </html>
