--- a/src/firebase.html
+++ b/src/firebase.html
@@ -20,14 +20,14 @@
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyAn3LM9h3hmzTiYdaAMQfgFK-4vgLqf4Bc",
-        authDomain: "covid-h5.firebaseapp.com",
-        databaseURL: "https://covid-h5.firebaseio.com",
-        projectId: "covid-h5",
-        storageBucket: "covid-h5.appspot.com",
-        messagingSenderId: "182767721880",
-        appId: "1:182767721880:web:5c2e846878652a87ce9fed",
-        measurementId: "G-HHHZ40CE8F",
+        apiKey: 'AIzaSyAn3LM9h3hmzTiYdaAMQfgFK-4vgLqf4Bc',
+        authDomain: 'covid-h5.firebaseapp.com',
+        databaseURL: 'https://covid-h5.firebaseio.com',
+        projectId: 'covid-h5',
+        storageBucket: 'covid-h5.appspot.com',
+        messagingSenderId: '182767721880',
+        appId: '1:182767721880:web:5c2e846878652a87ce9fed',
+        measurementId: 'G-HHHZ40CE8F',
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
@@ -35,16 +35,22 @@
       console.log(firebase);
       let app = firebase.analytics();
       app.setAnalyticsCollectionEnabled(true);
-      document.querySelector(".login").onclick = function() {
-        console.log("login");
-        app.logEvent("haibo", {
-          description: "login description",
+      document.querySelector('.login').onclick = function() {
+        console.log('login');
+        app.logEvent('haibo', {
+          content_type: 'react',
+          description: 'react',
+          event_category: 'react',
+          name: 'react',
         });
       };
-      document.querySelector(".share").onclick = function() {
-        console.log("share");
-        app.logEvent("share", {
-          description: "share description",
+      document.querySelector('.share').onclick = function() {
+        console.log('share');
+        app.logEvent('haibo', {
+          content_type: 'angular',
+          description: 'vue',
+          event_category: 'vue',
+          name: 'vue',
         });
       };
     </script>
