--- a/src/css3.html
+++ b/src/css3.html
@@ -160,6 +160,7 @@
         <li>3</li>
         <li>4</li>
         <li>5</li>
+        <li></li>
       </ul>
     </section>
     <section>
@@ -213,6 +214,9 @@
       ul > li {
         height: 100px;
         background: yellow;
+      }
+      ul > li:empty {
+        background: red;
       }
       .sticky {
         position: sticky;
